# gbksync

./: .gitmodules  Cargo.toml
.github/workflows/: ci.yaml
GitBackSync.app/Contents/: Info.plist
GitBackSync.app/Contents/MacOS/: gbksync
examples/: proxy.rs
src/: config.rs  git.rs  git_service.rs  lib.rs  macos_proxy.rs  main.rs  network.rs  ui.rs  ui_gpui.rs
