[package]
name = "gbksync"
version = "0.1.0"
edition = "2021"
description = ""

[dependencies]
git2 = "0.19.0"
rui = "0.6.1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-oslog = "=0.1.2"
tracing-subscriber = { version = "0.3", features = ["std", "env-filter"] }
core-foundation = "0.9"
objc = "0.2"


[package.metadata.bundle]
name = "GitBackSync"
identifier = "online.welkin.gbksync"
version = "1.0.0"
category = "Developer Tool"
copyright = "Copyright (c) Yuhang Qin 2024. All rights reserved."
short_description = "An Scheduled Git committer & pusher."
long_description = """
This tool help schedule commit and push files.
"""
