[package]
name = "gbksync"
version = "0.1.0"
edition = "2021"
description = ""

[dependencies]
git2 = "0.19.0"
rui = "0.6.1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-oslog = "=0.1.2"
tracing-subscriber = { version = "0.3", features = ["std", "env-filter"] }
serde = { version = "1.0.209", features=["std", "derive", "serde_derive"] }
serde_json = "1.0.127"
rfd = "0.14.1"
uuid = { version = "1.10.0", features = ["std", "v4"] }
vger = "0.2.7"
gpui = { path="./crates/zed/crates/gpui" }


[package.metadata.bundle]
name = "GitBackSync"
identifier = "online.welkin.gbksync"
icon = ["32x32.png", "128x128.png", "128x128@2x.png"]
version = "1.0.0"
category = "Developer Tool"
copyright = "Copyright (c) Yuhang Qin 2024. All rights reserved."
short_description = "An Scheduled Git committer & pusher."
long_description = """
This tool help schedule commit and push files.
"""

[lib]
crate-type=["rlib", "dylib"]
name = "gbksync"
path = "src/lib.rs"
